# nvidia-gpu-monitoring

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README.rst
data_extractor/: run.py
data_visualizer/: requirements.txt  run.py
device_data_filter/: run.py
docs/: diagrams.mdj  monitor.10.ai  monitor.2.ai  monitor.4.ai  monitor.csv
monitor/: CMakeLists.txt  config.h.in  dlib.h  dlib_unix.cpp  dlib_unix.h  dlib_windows.cpp  dlib_windows.h  monitor.cpp  monitor.h  nvml.cpp  nvml.h  utils.cpp  utils.h
